add code to loop and add points relative to a last point and a random user-generated point

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
   <canvas></canvas>
-
+  <div>
+    <button id='go'>Go</button>
+  </div>
+  <div>
+    <button id='potato'>stop</button>
+  </div>
   <script src="./js/scripts.js"></script>
   </body>
 </html>
