--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./css/styles.css" rel="stylesheet" type= "text/css">
-  <title>Chaos Game</title>
+  <title>Canvas Resize</title>
+  <!-- css should go in css file -->
+  <style type="text/css">
+    body {
+      background-color: lightgrey;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <canvas></canvas>
-  <div>
-    <button id='go'>Go</button>
-  </div>
-  <div>
-    <button id='potato'>stop</button>
-  </div>
-  <script src="./js/scripts.js"></script>
-  </body>
+  <!-- goes in header -->
+  <script src="canvas.js"></script>
+</body>
 </html>
