modify canvas to remove scroll bars

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       background-color: lightgrey;
       margin: 0;
     }
+
+    canvas {
+      display: block;
+    }
   </style>
 </head>
 <body>
